src/tokenizer/snapshots/reconcile_text__tokenizer__line_tokenizer__tests__with_snapshots-11.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"Mixed\\r\\nand\\rbare\")"
---
[
    Token {
        normalized: "Mixed",
        original: "Mixed",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\r\n",
        original: "\r\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "and",
        original: "and",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\r",
        original: "\r",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "bare",
        original: "bare",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
