src/tokenizer/snapshots/reconcile_text__tokenizer__line_tokenizer__tests__with_snapshots-7.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"\\n\")"
snapshot_kind: text
---
[
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
